--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <title>Iron Dillo Cybersecurity – Austin-Based Security Partner</title>
-  <meta name="description" content="Iron Dillo is an Austin-based, veteran-owned cybersecurity partner delivering assessments, incident support, and practical guidance for organizations across Texas." />
+  <title>Iron Dillo Cybersecurity – Veteran-Owned Online Protection</title>
+  <meta name="description" content="Iron Dillo provides honest, hands-on protection for individuals, small businesses, and rural operations. Veteran-owned and mission-driven, offering remote diagnostics, documentation, and guidance you can trust." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Fonts & Tailwind -->
@@ -25,7 +25,7 @@
       }
     }
   </script>
-  <!-- Security Headers -->
+  <!-- 🛡 Security Headers -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.tailwindcss.com https://unpkg.com https://www.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; frame-src https://www.google.com; form-action 'self' https://formspree.io; object-src 'none'; base-uri 'self';">
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta http-equiv="X-Frame-Options" content="DENY">
@@ -40,11 +40,11 @@
   <!-- Logo -->
   <header class="pt-10 text-center sm:mb-6 md:mb-8">
     <img src="/assets/irondillo-preview.png" alt="Iron Dillo logo"
-         class="mx-auto mb-6 w-40 h-auto" />
+         class="mx-auto mb-6 w-40 h-auto drop-shadow-md" />
   </header>
 
   <!-- Navigation -->
-  <nav class="bg-armadilloBlack rounded-md mb-8 w-full">
+  <nav class="bg-armadilloBlack rounded-md mb-8 w-full fade-in">
     <div class="flex justify-evenly flex-wrap">
       <a href="/index.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Home</a>
       <a href="/services.html" class="py-3 px-5 text-offWhite font-semibold uppercase hover:text-oliveGreen hover:underline">Services</a>
@@ -55,71 +55,67 @@
 
   <!-- Hero -->
   <main class="text-center max-w-3xl mx-auto px-6 sm:mb-6 md:mb-8">
-    <h1 class="text-5xl font-extrabold text-oliveGreen mb-8">Austin-Based Cybersecurity Expertise</h1>
-    <p class="text-lg leading-relaxed mb-8 text-armadilloBlack">
-      Iron Dillo Cybersecurity is a veteran-owned firm headquartered in Austin and serving organizations across Texas.
-      We deliver clear risk insights, responsive incident guidance, and modern security strategy without the hype.
+    <h1 class="text-5xl font-extrabold text-oliveGreen mb-8">Iron Dillo Cybersecurity</h1>
+    <p class="text-lg leading-relaxed mb-12">
+      <span class="text-oliveGreen font-medium">Iron Dillo Cybersecurity</span> protects
+      <span class="font-semibold text-armadilloBlack">individuals</span>,
+      <span class="font-semibold text-armadilloBlack">small businesses</span>, and
+      <span class="font-semibold text-armadilloBlack">rural operations</span> across East Texas.
+      We provide diagnostics, documentation, and guidance you can <span class="font-semibold text-armadilloBlack">trust</span>.
     </p>
 
-    <div class="bg-white border border-armadilloGray rounded-lg py-5 px-6 text-left shadow-sm max-w-xl mx-auto">
-      <p class="text-sm uppercase tracking-wide text-oliveGreen mb-1">Direct line</p>
-      <a href="tel:19034023814" class="block text-3xl font-semibold text-armadilloBlack">
+    <div class="bg-white border-2 border-oliveGreen rounded-xl py-6 px-4 shadow-lg inline-block">
+      <a href="tel:19034023814" class="block text-4xl font-extrabold text-oliveGreen mt-3">
         (903) 402-3814
       </a>
-      <p class="text-armadilloGray mt-2">Connect with a consultant for assessments, remediation planning, or executive briefings.</p>
+      <p class="text-armadilloGray mt-2 max-w-xs mx-auto">Call now for immediate cybersecurity support tailored to East Texas.</p>
     </div>
   </main>
 
-  <!-- Core Commitments -->
-  <section class="my-12 bg-white border border-armadilloGray/30 rounded-lg max-w-4xl mx-auto p-10 text-left">
-    <h2 class="text-3xl font-bold text-armadilloBlack mb-4">Clarity, Continuity, Confidence</h2>
-    <p class="text-lg text-armadilloGray leading-relaxed mb-6">
-      We focus on the fundamentals that keep Texas organizations resilient—transparent reporting, disciplined execution,
-      and reliable follow-through. From growth-stage startups to established public institutions, our Austin-based team
-      meets you where you are and builds maturity without disrupting your mission.
-    </p>
-    <ul class="grid gap-4 md:grid-cols-3 text-sm text-armadilloBlack">
-      <li class="border border-oliveGreen/40 rounded-lg p-4">
-        <h3 class="font-semibold text-oliveGreen mb-2">Strategic Alignment</h3>
-        <p>Security roadmaps anchored to business objectives, budget, and compliance goals.</p>
-      </li>
-      <li class="border border-oliveGreen/40 rounded-lg p-4">
-        <h3 class="font-semibold text-oliveGreen mb-2">Operational Discipline</h3>
-        <p>Methodical assessments, validated remediation plans, and measurable progress.</p>
-      </li>
-      <li class="border border-oliveGreen/40 rounded-lg p-4">
-        <h3 class="font-semibold text-oliveGreen mb-2">Collaborative Support</h3>
-        <p>Executive-ready communication and hands-on coordination with internal teams.</p>
-      </li>
-    </ul>
+  <!-- Split Section with Bluebonnet Image -->
+  <section class="grid grid-cols-1 md:grid-cols-2 gap-0 my-12">
+    <div class="flex items-center justify-center bg-offWhite p-8">
+      <div>
+        <h2 class="text-3xl font-bold text-armadilloBlack mb-4">Rooted in East Texas</h2>
+        <p class="text-lg text-armadilloGray leading-relaxed"> 
+          We protect the businesses and people our community depends on 
+          with cybersecurity that’s accessible, affordable, and reliable.
+        </p>
+      </div>
+    </div>
+    <div>
+      <img src="/assets/Bluebonnet.png" alt="Texas Bluebonnet Field"
+           class="w-full h-full object-cover" />
+    </div>
   </section>
 
   <!-- What We Do Section -->
   <section class="max-w-4xl mx-auto text-center px-6 py-16">
-    <h2 class="text-3xl font-bold text-armadilloBlack mb-6">Engagement Highlights</h2>
+    <h2 class="text-3xl font-bold text-armadilloBlack mb-6">What Iron Dillo Delivers</h2>
     <p class="mb-10 text-lg text-armadilloGray leading-relaxed">
-      Every engagement is designed for clarity and measurable outcomes. Whether you need third-party risk validation or
-      a steady partner for program development, our consultants deliver professional guidance rooted in real-world experience.
+      We believe every business deserves protection. That’s why we provide 
+      hands-on cybersecurity for East Texas individuals, small businesses, 
+      and rural operations at a scale and cost that makes sense.
     </p>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 text-left">
-      <div class="bg-white border border-armadilloGray/30 p-6 rounded-lg">
-        <h3 class="font-semibold text-oliveGreen mb-3">Security Posture Reviews</h3>
-        <p class="text-sm text-armadilloGray">Comprehensive assessments that prioritize remediation workstreams and executive visibility.</p>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+      <div class="bg-offWhite p-6 rounded-lg shadow">
+        <h3 class="font-semibold text-oliveGreen mb-2">Remote Assessments</h3>
+        <p class="text-sm text-armadilloGray">Identify risks in your systems quickly and securely.</p>
       </div>
-      <div class="bg-white border border-armadilloGray/30 p-6 rounded-lg">
-        <h3 class="font-semibold text-oliveGreen mb-3">Policy & Control Development</h3>
-        <p class="text-sm text-armadilloGray">Tailored documentation and controls mapped to frameworks such as NIST CSF and CIS Controls.</p>
+      <div class="bg-offWhite p-6 rounded-lg shadow">
+        <h3 class="font-semibold text-oliveGreen mb-2">Actionable Reports</h3>
+        <p class="text-sm text-armadilloGray">Plain-English documentation, not confusing jargon.</p>
       </div>
-      <div class="bg-white border border-armadilloGray/30 p-6 rounded-lg">
-        <h3 class="font-semibold text-oliveGreen mb-3">Incident Readiness & Response</h3>
-        <p class="text-sm text-armadilloGray">Structured playbooks, tabletop exercises, and on-call guidance when events occur.</p>
+      <div class="bg-offWhite p-6 rounded-lg shadow">
+        <h3 class="font-semibold text-oliveGreen mb-2">Practical Guidance</h3>
+        <p class="text-sm text-armadilloGray">Steps tailored to your business so you can move forward confidently.</p>
       </div>
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="bg-armadilloBlack text-offWhite text-center py-12 mt-auto">
-    <p class="text-oliveGreen font-semibold mb-6">Connect with Iron Dillo</p>
+    <p class="text-oliveGreen font-semibold mb-6">Connect with me</p>
 
     <!-- Social Icons -->
     <div class="inline-flex justify-center space-x-10 mb-8">
@@ -194,7 +190,7 @@
       </div>
     </div>
 
-    <p class="mb-4 text-sm text-offWhite/80">Austin-based and veteran-owned, supporting clients throughout Texas.</p>
+    <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
     <div class="space-x-4 mb-4">
       <a href="/privacy.html" class="hover:underline">Privacy</a>
       <a href="/terms.html" class="hover:underline">Terms</a>
