Restore content and add Austin-based messaging

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>About | Iron Dillo Cybersecurity</title>
-  <meta name="description" content="Learn more about Iron Dillo Cybersecurity, a veteran-owned business protecting East Texas individuals and small businesses with practical, trustworthy security solutions." />
+  <meta name="description" content="Learn more about Iron Dillo Cybersecurity, a veteran-owned, Austin-based business protecting East Texas individuals and small businesses with practical, trustworthy security solutions." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Fonts & Tailwind -->
@@ -68,6 +68,7 @@
       <p class="text-armadilloBlack leading-relaxed text-lg">
         Iron Dillo Cybersecurity is a veteran-owned business dedicated to protecting individuals,
         small businesses, and rural communities across East Texas with practical, trustworthy cybersecurity solutions.
+        Proudly Austin-based, we bring local commitment to every engagement.
       </p>
     </section>
 
