--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Contact | Iron Dillo Cybersecurity</title>
-  <meta name="description" content="Get in touch with Iron Dillo Cybersecurity for consultations, risk assessments, and hands-on cyber defense." />
+  <meta name="description" content="Get in touch with Iron Dillo Cybersecurity for consultations, risk assessments, and hands-on cyber defense from an Austin-based team." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Fonts & Tailwind -->
@@ -64,6 +64,7 @@
     <p class="text-armadilloBlack mb-8 text-center">
       Have a cybersecurity question? Want to schedule a consult? Fill out the form below and I’ll respond as soon as possible.
     </p>
+    <p class="text-sm text-oliveGreen text-center mb-6">Austin-based availability with the flexibility to support clients across East Texas.</p>
 
     <div class="bg-armadilloBlack text-offWhite rounded-lg p-6 mb-8 text-center shadow-md">
       <p class="text-lg font-semibold tracking-wide uppercase">Call Direct</p>
