--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Services | Iron Dillo Cybersecurity</title>
-  <meta name="description" content="Explore the cybersecurity services offered by Iron Dillo, focused on protecting East Texas individuals and small businesses with practical, ethical solutions." />
+  <meta name="description" content="Explore the cybersecurity services offered by Iron Dillo, focused on protecting East Texas individuals and small businesses with practical, ethical solutions from an Austin-based team." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Fonts & Tailwind -->
@@ -63,6 +63,7 @@
   <section class="text-center mb-10 fade-in">
     <h1 class="text-4xl font-extrabold text-oliveGreen">Our Services</h1>
     <p class="text-armadilloGray mt-2">Practical, veteran-owned cybersecurity solutions for East Texas businesses and individuals.</p>
+    <p class="text-sm text-oliveGreen mt-2">Austin-based expertise with boots-on-the-ground commitment.</p>
   </section>
 
   <!-- Services Grid -->
