Broaden Texas coverage messaging

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>About | Iron Dillo Cybersecurity</title>
-  <meta name="description" content="Learn more about Iron Dillo Cybersecurity, a veteran-owned, Austin-based business protecting East Texas individuals and small businesses with practical, trustworthy security solutions." />
+  <meta name="description" content="Learn more about Iron Dillo Cybersecurity, a veteran-owned, Austin-based business protecting Texas individuals and small businesses with practical, trustworthy security solutions." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Fonts & Tailwind -->
@@ -67,7 +67,7 @@
     <section class="bg-white rounded-lg shadow-lg p-10 text-center">
       <p class="text-armadilloBlack leading-relaxed text-lg">
         Iron Dillo Cybersecurity is a veteran-owned business dedicated to protecting individuals,
-        small businesses, and rural communities across East Texas with practical, trustworthy cybersecurity solutions.
+        small businesses, and rural communities across Texas with practical, trustworthy cybersecurity solutions.
         Proudly Austin-based, we bring local commitment to every engagement.
       </p>
     </section>
@@ -82,7 +82,7 @@
         <p class="text-armadilloBlack leading-relaxed mb-4">
           I served in the U.S. Army in field artillery during Operation Enduring Freedom. After my service,
           I earned a Master of Science in Cybersecurity with distinction and am continuing my education through
-          the WGU Business School. Today, I’m proud to be active in the East Texas business community!
+          the WGU Business School. Today, I’m proud to be active in the Texas business community!
         </p>
         <p class="text-armadilloBlack leading-relaxed">
           I am pursuing the CISSP to strengthen my ability to serve clients,
@@ -126,7 +126,7 @@
     <section class="bg-armadilloBlack py-12 text-center rounded-lg shadow-lg">
       <h2 class="text-2xl font-bold text-offWhite mb-4">Ready to Secure Your Business?</h2>
       <p class="text-offWhite max-w-xl mx-auto mb-6">
-        Iron Dillo Cybersecurity is here to provide straightforward, hands-on support for East Texas 
+        Iron Dillo Cybersecurity is here to provide straightforward, hands-on support for Texas
         individuals and businesses. Let’s talk about the right plan for your needs.
       </p>
       <a href="/contact.html" class="bg-oliveGreen hover:bg-oliveDark text-white px-6 py-3 rounded-lg shadow-lg transition">
@@ -212,7 +212,7 @@
       </div>
     </div>
 
-    <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
+    <p class="italic mb-4">Trusted by Texas businesses. Veteran-owned. Mission-driven.</p>
     <div class="space-x-4 mb-4">
       <a href="/privacy.html" class="hover:underline">Privacy</a>
       <a href="/terms.html" class="hover:underline">Terms</a>
