--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
     <p class="text-armadilloBlack mb-8 text-center">
       Have a cybersecurity question? Want to schedule a consult? Fill out the form below and I’ll respond as soon as possible.
     </p>
-    <p class="text-sm text-oliveGreen text-center mb-6">Austin-based availability with the flexibility to support clients across East Texas.</p>
+    <p class="text-sm text-oliveGreen text-center mb-6">Austin-based availability with the flexibility to support clients across Texas.</p>
 
     <div class="bg-armadilloBlack text-offWhite rounded-lg p-6 mb-8 text-center shadow-md">
       <p class="text-lg font-semibold tracking-wide uppercase">Call Direct</p>
@@ -220,7 +220,7 @@
       </div>
     </div>
 
-    <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
+    <p class="italic mb-4">Trusted by Texas businesses. Veteran-owned. Mission-driven.</p>
     <div class="space-x-4 mb-4">
       <a href="/privacy.html" class="hover:underline">Privacy</a>
       <a href="/terms.html" class="hover:underline">Terms</a>
