--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <span class="text-oliveGreen font-medium">Iron Dillo Cybersecurity</span> protects
       <span class="font-semibold text-armadilloBlack">individuals</span>,
       <span class="font-semibold text-armadilloBlack">small businesses</span>, and
-      <span class="font-semibold text-armadilloBlack">rural operations</span> across East Texas.
+      <span class="font-semibold text-armadilloBlack">rural operations</span> across Texas.
       We provide diagnostics, documentation, and guidance you can <span class="font-semibold text-armadilloBlack">trust</span>.
     </p>
 
@@ -68,8 +68,8 @@
       <a href="tel:19039331342" class="block text-4xl font-extrabold text-oliveGreen mt-3">
         (903) 933-1342
       </a>
-      <p class="text-armadilloGray mt-2 max-w-xs mx-auto">Call now for immediate cybersecurity support tailored to East Texas.</p>
-      <p class="text-sm text-oliveGreen mt-3">Austin-based and proud to protect our East Texas neighbors.</p>
+      <p class="text-armadilloGray mt-2 max-w-xs mx-auto">Call now for immediate cybersecurity support tailored to Texas.</p>
+      <p class="text-sm text-oliveGreen mt-3">Austin-based and proud to protect our Texas neighbors.</p>
     </div>
   </main>
 
@@ -77,7 +77,7 @@
   <section class="grid grid-cols-1 md:grid-cols-2 gap-0 my-12">
     <div class="flex items-center justify-center bg-offWhite p-8">
       <div>
-        <h2 class="text-3xl font-bold text-armadilloBlack mb-4">Rooted in East Texas</h2>
+        <h2 class="text-3xl font-bold text-armadilloBlack mb-4">Rooted in Texas</h2>
         <p class="text-lg text-armadilloGray leading-relaxed"> 
           We protect the businesses and people our community depends on 
           with cybersecurity that’s accessible, affordable, and reliable.
@@ -94,8 +94,8 @@
   <section class="max-w-4xl mx-auto text-center px-6 py-16">
     <h2 class="text-3xl font-bold text-armadilloBlack mb-6">What Iron Dillo Delivers</h2>
     <p class="mb-10 text-lg text-armadilloGray leading-relaxed">
-      We believe every business deserves protection. That’s why we provide 
-      hands-on cybersecurity for East Texas individuals, small businesses, 
+      We believe every business deserves protection. That’s why we provide
+      hands-on cybersecurity for Texas individuals, small businesses,
       and rural operations at a scale and cost that makes sense.
     </p>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
@@ -191,7 +191,7 @@
       </div>
     </div>
 
-    <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
+    <p class="italic mb-4">Trusted by Texas businesses. Veteran-owned. Mission-driven.</p>
     <div class="space-x-4 mb-4">
       <a href="/privacy.html" class="hover:underline">Privacy</a>
       <a href="/terms.html" class="hover:underline">Terms</a>
