--- a/lindale-tyler-cybersecurity.html
+++ b/lindale-tyler-cybersecurity.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Cybersecurity in Lindale & Tyler, Texas | Iron Dillo</title>
   <meta name="description" content="Veteran-owned Iron Dillo Cybersecurity defends Lindale and Tyler, Texas businesses with practical cyber defense services." />
-  <meta name="keywords" content="Lindale Texas cybersecurity, Tyler Texas cyber defense, East Texas IT security, small business cybersecurity" />
+  <meta name="keywords" content="Lindale Texas cybersecurity, Tyler Texas cyber defense, Texas IT security, small business cybersecurity" />
   <link rel="canonical" href="https://irondillo.com/lindale-tyler-cybersecurity.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -76,7 +76,7 @@
     <section class="bg-white rounded-lg shadow-lg p-8 text-center">
       <h1 class="text-3xl font-bold text-oliveGreen mb-4">Lindale & Tyler Cybersecurity</h1>
       <p class="text-armadilloBlack leading-relaxed">
-        Based in Lindale, Iron Dillo Cybersecurity proudly serves nearby Tyler and the surrounding East Texas region.
+        Based in Lindale, Iron Dillo Cybersecurity proudly serves nearby Tyler, the surrounding East Texas communities, and businesses across Texas.
         I provide hands-on cyber defense, risk assessments, and security training tailored to local small businesses.
       </p>
     </section>
@@ -91,7 +91,7 @@
     </section>
 
     <section class="bg-white rounded-lg shadow-lg p-8">
-      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Services for East Texas</h2>
+      <h2 class="text-2xl font-semibold text-oliveGreen mb-4">Services for Texas Businesses</h2>
       <p class="text-armadilloBlack leading-relaxed">
         Whether you need a one-time security audit or ongoing support, I offer practical solutions:
       </p>
@@ -193,7 +193,7 @@
       </div>
     </div>
 
-    <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
+    <p class="italic mb-4">Trusted by Texas businesses. Veteran-owned. Mission-driven.</p>
     <div class="space-x-4 mb-4">
       <a href="/privacy.html" class="hover:underline">Privacy</a>
       <a href="/terms.html" class="hover:underline">Terms</a>
