--- a/maintenance.html
+++ b/maintenance.html
@@ -60,13 +60,13 @@
         We’re currently in
         <span class="text-oliveGreen font-semibold">Cyberstasis Mode</span> —
         updating our site with a fresh new look and stronger protection for
-        <span class="font-semibold">East Texas small businesses</span>,
+        <span class="font-semibold">Texas small businesses</span>,
         <span class="font-semibold">rural operations</span>, and
         <span class="font-semibold">individuals</span>.
       </p>
 
       <p class="text-sm text-armadilloGray">
-        Veteran-owned. Mission-driven. Protecting East Texas with honesty and care.
+        Veteran-owned. Mission-driven. Protecting Texas with honesty and care.
       </p>
     </div>
   </main>
@@ -148,7 +148,7 @@
       </div>
     </div>
 
-    <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
+    <p class="italic mb-4">Trusted by Texas businesses. Veteran-owned. Mission-driven.</p>
     <div class="space-x-4 mb-4">
       <a href="/privacy.html" class="hover:underline">Privacy</a>
       <a href="/terms.html" class="hover:underline">Terms</a>
