--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Services | Iron Dillo Cybersecurity</title>
-  <meta name="description" content="Explore the cybersecurity services offered by Iron Dillo, focused on protecting East Texas individuals and small businesses with practical, ethical solutions from an Austin-based team." />
+  <meta name="description" content="Explore the cybersecurity services offered by Iron Dillo, focused on protecting Texas individuals and small businesses with practical, ethical solutions from an Austin-based team." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Fonts & Tailwind -->
@@ -62,7 +62,7 @@
   <!-- Page Title -->
   <section class="text-center mb-10 fade-in">
     <h1 class="text-4xl font-extrabold text-oliveGreen">Our Services</h1>
-    <p class="text-armadilloGray mt-2">Practical, veteran-owned cybersecurity solutions for East Texas businesses and individuals.</p>
+    <p class="text-armadilloGray mt-2">Practical, veteran-owned cybersecurity solutions for Texas businesses and individuals.</p>
     <p class="text-sm text-oliveGreen mt-2">Austin-based expertise with boots-on-the-ground commitment.</p>
   </section>
 
@@ -192,7 +192,7 @@
       </div>
     </div>
 
-    <p class="italic mb-4">Trusted by East Texas businesses. Veteran-owned. Mission-driven.</p>
+    <p class="italic mb-4">Trusted by Texas businesses. Veteran-owned. Mission-driven.</p>
     <div class="space-x-4 mb-4">
       <a href="/privacy.html" class="hover:underline">Privacy</a>
       <a href="/terms.html" class="hover:underline">Terms</a>
